crates/sdk-tests/tests/template/declaring_union_not_allowed.stderr
error: declaring `union` inside `#[template]` is not supported.
 --> $DIR/declaring_union_not_allowed.rs:3:1
  |
3 | #[template]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `template` (in Nightly builds, run with -Z macro-backtrace for more info)
